kuberenetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hello-application
  name: hello-app-service
spec:
  selector:
    app: hello-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
